--- a/sprint-2/sesion-0703/styles/style.css
+++ b/sprint-2/sesion-0703/styles/style.css
@@ -84,6 +84,40 @@ body{
     border-radius: 5px;
 }
 
+.cardVideo{
+    width: 300px;
+    /* height: 200px; */
+}
+.cardVideo figure{
+    width: 100%;
+}
+.cardVideo figure img{
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
+.cardVideo section h3{
+    width: 100%;
+    text-align: justify;
+}
+
+.cardVideo section div{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.cardVideo section div img{
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.cardVideo section div span{
+    font-weight: 800;
+}
+
 @media screen and (max-width: 600px) {
    .header__nav{
     flex-direction: column;
