--- a/sprint-2/sesion-0703/styles/style.css
+++ b/sprint-2/sesion-0703/styles/style.css
@@ -147,6 +147,48 @@ body{
     color: #fff;
 }
 
+.search-bar{
+    border: solid 1px #ccc;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 5px 20px;
+    margin: auto;
+}
+
+ .search-bar:focus-within{
+    border: solid 1px #aaa;
+    box-shadow: 0px 2px 5px rgba(35, 35, 36, 0.2);
+}
+
+.search-bar input{
+    border: none;
+    outline: none;
+    color: #ccc;
+    pad: 10px;
+    font-size: 16px;
+    flex: auto;
+}
+
+.search-bar .actions{
+    display: flex;
+    gap: 10px;
+}
+
+.search-bar .actions button{
+    border: none;
+    outline: none;
+    background: none;
+    cursor: pointer;
+    color: #aaa;
+}
+
+.search-bar .actions button:hover{
+    color: #2979e2;
+    text-decoration-color: #aaa;
+}
+
 @media screen and (max-width: 600px) {
    .header__nav{
     flex-direction: column;
