--- a/modulo-2/sprint-1/ejercicio-inmobiliaria/front-inmobiliaria/styles/style.css
+++ b/modulo-2/sprint-1/ejercicio-inmobiliaria/front-inmobiliaria/styles/style.css
@@ -25,5 +25,99 @@ body {
   color: #FFFFFF;
   text-decoration: none;
 }
+.header__navbar {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 36px;
+  gap: 25px;
+}
+.header__links {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+  align-items: center;
+}
+.header__links ul {
+  display: flex;
+  gap: 10px;
+  list-style: none;
+}
+.header__links a {
+  text-decoration: none;
+  color: #4B4D4F;
+  font-size: 14px;
+  font-weight: 500;
+}
+.header__links a:hover {
+  color: #2a41e8;
+}
+.header__logo {
+  width: 215px;
+  height: 82px;
+}
+.header__logo img {
+  width: 100%;
+  height: 100%;
+}
+.header__button {
+  padding: 31px;
+  background-color: #FF5E14;
+  font-size: 16px;
+  color: #FFFFFF;
+  border: none;
+}
+.header__banner {
+  background-image: url("../assets/hero-bg-image.png");
+  height: 50vh;
+  background-size: cover;
+  padding: 157px 215px;
+}
+.header__title {
+  font-size: 42px;
+  font-weight: 500;
+  color: #FFFFFF;
+  margin-bottom: 12px;
+}
+.header__subtitle {
+  font-size: 18px;
+  font-weight: 400;
+  color: #FFFFFF;
+  margin-bottom: 54px;
+}
+.header__search {
+  background-color: #FFFFFF;
+  display: flex;
+  justify-content: space-around;
+  padding: 30px;
+  border-radius: 4px;
+}
+.header__search input {
+  padding: 20px;
+  min-width: 400px;
+}
+.header__search input::placeholder {
+  font-size: 18px;
+}
+.header__search button {
+  padding: 20px;
+  background-color: #2a41e8;
+  font-size: 18px;
+  color: #FFFFFF;
+  border: none;
+  border-radius: 4px;
+}
+.header__select {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.header__select label {
+  color: #9B9B9B;
+  font-weight: 500;
+  font-size: 14px;
+}
+.header__select select {
+  border: none;
+}
 
 /*# sourceMappingURL=style.css.map */
