Agregando ejercicio práctico sesión 9

--- a/modulo-2/sprint-1/ejercicio-inmobiliaria/front-inmobiliaria/styles/_mixings.scss
+++ b/modulo-2/sprint-1/ejercicio-inmobiliaria/front-inmobiliaria/styles/_mixings.scss
@@ -5,4 +5,10 @@
     font-size: $fontSize;
     color: $colorFont;
     border: none;
+
+    // &:hover{
+    //     background-color: $colorFont;
+    //     color: $backgroundColor;
+    //     cursor: pointer
+    // }
 }
